fix padding at bottom of community day stats on mobile

--- a/web/wp-content/themes/cncf-twenty-two/source/scss/detached/annual-report-2023.scss
+++ b/web/wp-content/themes/cncf-twenty-two/source/scss/detached/annual-report-2023.scss
@@ -1267,7 +1267,10 @@ html {
 		}
 		&__kcd {
 			.icon-box-1:last-child {
-				padding-bottom: 0;
+				@media (min-width: 800px) {
+					padding-bottom: 0;
+					border-bottom: 0;
+				}
 			}
 			&-col1 {
 				grid-column: span 12;
